fix a few deprecations